# matrix-factorization

./: .gitignore  00_setup.ipynb  01_matrix_factorization_vowpal.ipynb  02_stochastic_gradient_descent.ipynb  03_alternating_least_squares.ipynb  04_ml100k.ipynb  05_recommendation_system_with_tensorflow.ipynb  06_matrix_factorization.ipynb  07_collaborative_filtering.ipynb  08_knn_collaborative_filtering.ipynb  09_matrix_factorization.ipynb  10_matrix_factorization_with_bias.ipynb  11_non_negative_matrix_factorization.ipynb  12_neural_netowrk.ipynb  13_torch.ipynb  14_matrix.ipynb  Makefile  README.md  Untitled.ipynb  lda.ipynb  main.py  matrix_factorization.ipynb  matrix_factorization.py.ipynb  matrix_factorization_101.ipynb  mf-run.sh  mf-setup.sh  mf-test.sh  pyproject.toml  signature.py
.ipynb_checkpoints/: matrix_factorization.py-checkpoint.ipynb  singular_value_decomposition-checkpoint.ipynb
docs/: 00_setup.md  01_matrix_factorization_vowpal.md  02_stochastic_gradient_descent.md  03_alternating_least_squares.md  04_ml100k.md  05_recommendation_system_with_tensorflow.md  06_matrix_factorization.md  07_collaborative_filtering.md  08_knn_collaborative_filtering.md  09_matrix_factorization.md  10_matrix_factorization_with_bias.md  11_non_negative_matrix_factorization.md  12_neural_netowrk.md  13_torch.md  lda.md  matrix_factorization.md  matrix_factorization.py.md  matrix_factorization_101.md  singular_value_decomposition.md
movie_helper/: load_movie.py  load_user.py  load_user_item.py  movie.py  rating.py  user.py
