[tool.poetry]
name = "matrix-factorization"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
vowpalwabbit = "^9.9.0"
numpy = "^1.26.3"
watermark = "^2.4.3"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
tensorflow = "2.15.0"
tqdm = "^4.66.1"
seaborn = "^0.13.2"
torch = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
